--- a/www/gridDynamicSplit.html
+++ b/www/gridDynamicSplit.html
@@ -21,6 +21,7 @@
         <script src="js-lib/jquery.validate.js"></script>
         <script src="js-lib/jquery-barcode.min.js"></script>
         <script src="js-lib/handlebars.js"></script>
+        <script src="js/hound.player.js"></script>
         <script type="text/javascript"
                 src="http://maps.google.com/maps/api/js?sensor=true">
         </script>
