--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
                 <a href="" onclick="hound.player.loadApp();" data-role="button" data-icon="refresh" >Descargar Aplicacion</a>
             </div>
             <script type="text/javascript">
-                hound.player.loadValues();
+                localStorage.clear();
             </script>
         </div>        
     </body>
